force-app/main/default/objects/nFUSE__App_Plugin__mdt/nFUSE__App_Plugin__mdt.object-meta.xml
<CustomObject>
    <description>This object houses nFUSE Integration plug-in definitions.</description>
    <label>App Plugin</label>
    <pluralLabel>App Plugins</pluralLabel>
</CustomObject>