force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Activator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Activator__c</fullName>
    <description>Activator class for the plugin.</description>
    <label>Activator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>