force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Major_Version__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Major_Version__c</fullName>
    <description>The major API version.</description>
    <label>Major Version</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>