force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Middleware_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Middleware_Endpoint__c</fullName>
    <description>An optional Endpoint URL for an App Plugin specific middleware.  If a value is not provided the Integration Platform Middleware is used.</description>
    <label>Middleware Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>