force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Middleware_Password__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Middleware_Password__c</fullName>
    <description>The password for an App Plugin specific middleware.</description>
    <label>Middleware Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>