force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Minor_Version__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Minor_Version__c</fullName>
    <description>The minor API version.</description>
    <label>Minor Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>