force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Provider_Name__c</fullName>
    <description>The provider name used for messaging.</description>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>