force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Timeout__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Timeout__c</fullName>
    <defaultValue>3000</defaultValue>
    <description>The HTTP request timeout duration in milliseconds</description>
    <label>Timeout</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>