force-app/main/default/objects/nFUSE__App_Plugin__mdt/fields/nFUSE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Type__c</fullName>
    <description>The plugin type name.</description>
    <label>Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>